# rust_pinetime

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
app/: Cargo.toml  build.rs  wrapper.h
app/src/: config.rs  main.rs
nrf52832_lib/: nrf52832_lib.emProject  nrf52832_lib.emSession
nrf52832_lib/inc/: gpio.h  input.h  lib.h  rtc.h  softFifo.h  spi.h
nrf52832_lib/src/: gpio.c  input.c  rtc.c  softFifo.c  spi.c
src/: config.rs  flash.rs  lcd.rs  main.rs  mcu.rs  task.rs
src/CoreDrivers/: input.rs  mod.rs  p0.rs  spi.rs  uart.rs
src/app/: app.rs  display.rs  icon.rs  info.rs  mod.rs
src/app/page/: home.rs  log.rs  mod.rs  notifications.rs  settings.rs  startup.rs
src/drivers/: battery.rs  button.rs  buttons.rs  clock.rs  debug.rs  lcd.rs  log.rs  mod.rs  touch.rs
src/drivers/app/: app.rs  mod.rs
src/drivers/lcd/: font.rs  images.rs  lcd.rs  lcd_api.rs  mod.rs  st7789.rs
src/drivers/touch/: cst8165.rs  cst816s.rs  mod.rs  touch.rs
src/mcu/: adc.rs  gpio.rs  i2c.rs  input.rs  mod.rs  rtc.rs  spi.rs  spim.rs  timer.rs  uart.rs
src/mcu/ble/: ble.rs  mod.rs  sdh.rs
src/nrf52_mcu/: mod.rs  p0.rs  spi.rs  uart.rs
