[package]
authors = ["Taylor Spencer <tayspen72@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "pinetime"
version = "0.1.0"

[dependencies]
alloc-cortex-m = "0.3.5"
cortex-m = "0.6.1"
cortex-m-rt = "0.6.11"
cortex-m-semihosting = "0.3.5"
nrf52832-pac = "0.8.0"
# panic-abort = "0.3.2"
panic-halt = "0.2.0"

[features]
nrf52_dk = []

[[bin]]
name = "pinetime"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizationscargo buo
